0.1.0-beta.6
- 2023-04-24 fixed button text should be white
- 2023-04-24 updated: put saving button to upper right
- 2023-04-21 updated: upgraded to dmeditor more formal api

0.1.0-beta.5
- 2023-03-22 add: Feedback form
- 2023-03-13 updated: the picture stretching problem
- 2023-03-09 fixed: contentgrid/embed_content doesn't load instant data
- 2023-03-09 added:imageUrl property for dmeditor

0.1.0-beta.3
- 2023-03-02 added: file tab
- 2023-03-02 added: getFileUrl fun
- 2023-02-17 updated: customProperty modification and saving
- 2023-02-17 updated: typescript type

0.1.0-beta.1
---------
- init